monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A0142/A0142a.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A0142;

grammar A0142a {

  Foo = "foo";

  nokeyword "foo";

}
